--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,8 +1,2 @@
-/DataPreprocessing.pyc
-/SentimentAnalysis_NB.pyc
-/SentimentAnalysis_SVM.pyc
-/DataPreprocessing.pyc
-/SentimentAnalysis_NB.pyc
-/SentimentAnalysis_SVM.pyc
-/SentimentAnalysis_NB.pyc
+*.pyc
 /test.py
